crates/testing/sysml-spec-tests/tests/snapshots/identity_invariants__cross_transport_stdlib_base.snap
---
source: crates/testing/sysml-spec-tests/tests/identity_invariants.rs
expression: bundle
---
{
  "fixture": "stdlib_base",
  "only_in_lsp": [],
  "only_in_rest": [],
  "shared": [
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>"
  ],
  "transport_lsp": [
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>"
  ],
  "transport_rest": [
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>"
  ]
}
