crates/testing/sysml-spec-tests/tests/snapshots/identity_invariants__reparse_coffee_views.snap
---
source: crates/testing/sysml-spec-tests/tests/identity_invariants.rs
expression: bundle
---
{
  "fixture": "coffee_views",
  "only_in_a": [],
  "only_in_b": [],
  "parse_a": [
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>"
  ],
  "parse_b": [
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>"
  ],
  "shared": [
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>",
    "<UUID>"
  ]
}
